--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 :root {
@@ -13,7 +15,6 @@
 }
 
 body {
-  margin: 0;
   font-family: "Itim", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   overflow-y: scroll;
@@ -21,6 +22,33 @@ body {
   flex-direction: column;
   min-height: 100dvh;
   align-items: center;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 1;
+}
+
+ul {
+  margin: 0.5rem 0;
+}
+
+p {
+  line-height: 30px;
+  font-size: 20px;
+  margin: 0.5rem 0;
 }
 
 main {
@@ -78,11 +106,6 @@ header a:hover {
   text-decoration: underline;
 }
 
-p {
-  line-height: 30px;
-  font-size: 20px;
-}
-
 .nav-active {
   border-color: var(--brown-5);
   color: var(--brown-5);
@@ -95,4 +118,33 @@ p {
 
 ::selection {
   background-color: var(--brown-4);
+}
+
+#about,
+#home,
+#contact {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.simple-split {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.technology {
+  display: flex;
+  font-size: 20px;
+  gap: 8px;
+  align-items: center;
+  color: var(--brown-5);
+}
+
+.technology svg {
+  fill: var(--brown-5);
+  height: 24px;
+  width: 24px;
 }
