--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,23 +1,5 @@
-main {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-main > div {
-  display: flex;
-  align-items: center;
-}
-
-h1 {
+#home h1 {
   font-size: 5rem;
-  margin: 0;
-  line-height: 1;
-}
-
-main > div p {
-  margin: 0.5rem 0;
 }
 
 #cta {
@@ -36,6 +18,7 @@ main > div p {
   align-items: center;
   justify-content: center;
   gap: 8px;
+  margin-top: 1rem;
 }
 
 #cta svg {
