content/file: add contact page

--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -35,3 +35,11 @@
 #cta:active {
   background-color: var(--brown-4);
 }
+
+#skills,
+#socials {
+  display: flex;
+  list-style: none;
+  gap: 1.5rem;
+  margin: 1rem 0 0;
+}
