--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -102,7 +102,8 @@ header a:active {
   background-color: var(--brown-4);
 }
 
-header a:hover {
+header a:hover,
+.link:hover {
   text-decoration: underline;
 }
 
@@ -135,16 +136,22 @@ header a:hover {
   gap: 8px;
 }
 
-.technology {
+.icon-badge {
   display: flex;
   font-size: 20px;
   gap: 8px;
   align-items: center;
   color: var(--brown-5);
+  max-width: fit-content;
 }
 
-.technology svg {
+.icon-badge svg {
   fill: var(--brown-5);
   height: 24px;
   width: 24px;
+}
+
+.link {
+  color: var(--brown-5);
+  text-decoration: none;
 }
