add not found page

--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -123,7 +123,8 @@ header a:hover,
 
 #about,
 #home,
-#contact {
+#contact,
+#not-found {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -133,6 +134,7 @@ header a:hover,
 .simple-split {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: 8px;
 }
 
@@ -154,4 +156,38 @@ header a:hover,
 .link {
   color: var(--brown-5);
   text-decoration: none;
+}
+
+.cta-link {
+  font-size: 20px;
+  padding: 0.6rem 1.5rem;
+  border-radius: 6px;
+  border: 1px solid var(--brown-5);
+  display: flex;
+  max-width: fit-content;
+  color: var(--brown-5);
+  text-decoration: none;
+  font-weight: bold;
+  transition-property: background-color;
+  transition-duration: 200ms;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  margin-top: 1rem;
+}
+
+.cta-link svg {
+  width: 20px;
+  height: 20px;
+  fill: var(--brown-5);
+  margin-top: 2px;
+}
+
+.cta-link:hover {
+  background-color: var(--brown-2);
+}
+
+.cta-link:active {
+  background-color: var(--brown-4);
 }
