--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -54,9 +54,18 @@ p {
 main {
   margin: 78px 0;
   flex: 1;
-  padding: 5rem 1rem;
+  padding: 5rem 0;
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+main > div {
   max-width: 896px;
   width: 100%;
+  padding: 0 1rem;
 }
 
 header {
@@ -70,6 +79,7 @@ header {
   transition-property: box-shadow;
   transition-duration: 750ms;
   transition-timing-function: ease;
+  z-index: 100;
 }
 
 body,
@@ -82,6 +92,7 @@ header ul {
   align-items: center;
   justify-content: center;
   list-style: none;
+  margin: 0;
 }
 
 header a {
