--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -66,6 +66,10 @@ main > div {
   max-width: 896px;
   width: 100%;
   padding: 0 1rem;
+  opacity: 0;
+  transition-property: opacity;
+  transition-timing-function: ease;
+  transition-duration: 500ms;
 }
 
 header {
