style: remove id-based styles; content: update

--- a/public/assets/css/components.css
+++ b/public/assets/css/components.css
@@ -1,9 +1,9 @@
-#skills,
-#socials {
+.icon-badges {
   display: flex;
   list-style: none;
   gap: 1.5rem;
   margin: 1rem 0 0;
+  padding: 0;
 }
 
 #email-link {
@@ -95,4 +95,30 @@
 
 .cta-link:active svg {
   fill: var(--brown-6);
+}
+
+.project-date,
+.project-tags > * {
+  margin: 0;
+}
+
+.project-tags > * {
+  padding: 0 0.5rem;
+  border: 1px solid var(--brown-5);
+  color: var(--brown-5);
+  border-radius: 4px;
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.project-tags {
+  display: flex;
+  gap: 0.25rem;
+}
+
+.project-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+  margin-bottom: 0.5rem;
 }
