--- a/public/assets/css/utilities.css
+++ b/public/assets/css/utilities.css
@@ -11,3 +11,16 @@
 .page-transition-in {
   opacity: 1;
 }
+
+h1.larger {
+  font-size: 5rem;
+}
+
+h2.top-4 {
+  margin-top: 1rem;
+}
+
+h2.top-5,
+.project-header.top-5 {
+  margin-top: 1.25rem;
+}
