--- a/public/assets/css/components.css
+++ b/public/assets/css/components.css
@@ -1,9 +1,11 @@
 .icon-badges {
   display: flex;
   list-style: none;
-  gap: 1.5rem;
-  margin: 1rem 0 0;
+  column-gap: 1.5rem;
+  row-gap: 1rem;
+  margin: 0;
   padding: 0;
+  flex-wrap: wrap;
 }
 
 #email-link {
@@ -98,22 +100,26 @@
 }
 
 .project-date,
-.project-tags > * {
+.project-tags > *,
+.project-tag {
   margin: 0;
 }
 
-.project-tags > * {
+.project-tags > *,
+.project-tag {
   padding: 0 0.5rem;
   border: 1px solid var(--brown-5);
   color: var(--brown-5);
   border-radius: 4px;
-  font-size: 1rem;
-  line-height: 1.5rem;
+  font-size: 16px;
+  line-height: 1.25rem;
 }
 
 .project-tags {
   display: flex;
   gap: 0.25rem;
+  margin-bottom: 1rem;
+  max-width: fit-content;
 }
 
 .project-header {
@@ -121,4 +127,22 @@
   justify-content: space-between;
   align-items: end;
   margin-bottom: 0.5rem;
+  margin-top: 2rem;
+}
+
+.list li {
+  line-height: 30px;
+}
+
+.project-image {
+  border-radius: 8px;
+  border: 1px solid var(--brown-5);
+  overflow: hidden;
+  width: 100%;
+}
+
+.project-split {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
 }
