--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -32,12 +32,13 @@ h2 {
   font-size: 2rem;
 }
 
+h3 {
+  font-size: 1.5rem;
+}
+
 h1,
 h2,
-h3,
-h4,
-h5,
-h6 {
+h3 {
   line-height: 1;
 }
 
@@ -48,12 +49,16 @@ ul {
 
 p,
 li {
-  line-height: 30px;
   font-size: 20px;
 }
 
 p {
   margin: 0.5rem 0;
+  line-height: 30px;
+}
+
+img {
+  vertical-align: middle;
 }
 
 main {
@@ -89,6 +94,15 @@ header {
   transition-duration: 750ms;
   transition-timing-function: ease;
   z-index: 100;
+}
+
+hr {
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  border-bottom: 2px dashed var(--brown-5);
+  display: block;
+  margin: 2.5rem 0;
 }
 
 body,
