--- a/public/assets/css/utilities.css
+++ b/public/assets/css/utilities.css
@@ -16,11 +16,30 @@ h1.larger {
   font-size: 5rem;
 }
 
-h2.top-4 {
+.top-0 {
+  margin-top: 0;
+}
+
+.top-4 {
   margin-top: 1rem;
 }
 
-h2.top-5,
-.project-header.top-5 {
+.top-5 {
   margin-top: 1.25rem;
+}
+
+.top-6 {
+  margin-top: 1.5rem;
+}
+
+.bottom-0 {
+  margin-bottom: 0;
+}
+
+.bottom-3 {
+  margin-bottom: 0.75rem;
+}
+
+.bottom-4 {
+  margin-bottom: 1rem;
 }
