--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -116,6 +116,7 @@ header ul {
   justify-content: center;
   list-style: none;
   margin: 0;
+  padding: 0;
 }
 
 header a {
@@ -149,4 +150,30 @@ header a:hover,
   outline-offset: 2px;
   position: relative;
   z-index: 100;
+}
+
+@media screen and (max-width: 896px) {
+  h1 {
+    font-size: 3.5rem !important;
+  }
+
+  header a {
+    padding: 0.75rem;
+  }
+
+  header {
+    padding-top: 0.75rem;
+  }
+
+  main {
+    padding: 2.5rem 0;
+    margin: 69px 0;
+    max-width: 640px;
+  }
+
+  p,
+  li {
+    font-size: 1rem;
+    line-height: 27px;
+  }
 }
